# StereoDataRecorder

./: 4camera_settings.sh  CMakeLists.txt  README.md  camera_settings.sh  stereo_camera_settings.sh
3Dviz_image_studio/: CMakeLists.txt  README.md
3Dviz_image_studio/imgui/: imconfig.h
3Dviz_image_studio/include/: axes.h  pose.h  viz.h  viz_parameters.h  viz_utils.h  viz_utils2.h
3Dviz_image_studio/src/: axes.cpp  main.cpp  mavlink_module.cpp  modules.cpp  pose.cpp  viz.cpp  viz_utils.cpp  viz_utils2.cpp
arduino_code/trigger/: trigger.ino
camera_node/calibration/: cam1.txt  cam2.txt  stereo.txt
camera_node/include/: camera_node.h  trigger.h
camera_node/src/: camera_node.cpp  mono_camera_node.cpp  stereo_node.cpp  stereo_node_tripple.cpp  trigger.cpp
mavlink/: autopilot_interface.cpp  mavlink_node.cpp  mavlink_node.h
src/: app.cpp  main.cpp
